Fix minor layout issues

--- a/events/static/events/css/raffle.scss
+++ b/events/static/events/css/raffle.scss
@@ -35,6 +35,9 @@
 
     .view-results {
       margin-left: 2rem;
+      i {
+        margin-right: .2rem;
+      }
     }
   }
 }
